	  subdirectory under /usr/share/cups/banners is used for
	  the Spanish banner files.
	- Added support for Darwin/MacOS X builds.
	- Updated the scheduler so it knows the correct
	  language abbreviation to use for all supported
	  PPD LanguageVersion values.  The new code also
	  supports country codes as well, so "English-GB"
	  maps to the "en_GB" locale.


CHANGES IN CUPS V1.1.10-1

	- Minor fixes to the filter, systemv, and template
	  makefiles to install files properly.


CHANGES IN CUPS V1.1.10

	- Added a driver for DYMO label printers.
	- Added new ClassifyOverride directive to allow users
	  to override the classification of individual jobs.
	- Added new BrowseProtocols directive to control which
	  browse protocols are used (currently CUPS and SLP).
	- Added SLPv2 support (thanks to Matt Peterson for
	  contributing the initial implementation for CUPS.)
	- Adding a raw printer on a remote CUPS server now
	  correctly redirects PPD file requests to the remote
	  server.
	- The serial backend now limits writes to 1/10th
	  second worth of data to avoid buffer overflows
	  with some types of flow control.
	- The scheduler did not properly process PUT requests,
	  so configuration files could not be uploaded to the
	  server.
	- The scheduler did not strip trailing whitespace on
	  lines in the configuration files.
	- The httpWrite() function did not transition the PUT
	  request to the HTTP_STATUS state to get the status
	  from the server.
	- The scheduler did not properly handle trailing null
	  ("-") filters when testing a driver that sent data
	  to the file: pseudo-backend.
	- The IPP backend now only sends a document-format of
	  "application/vnd.cups-raw" when printing to another
	  CUPS server using a local printer driver or interface
	  script.  Previously the job's document format was
	  used, which was incorrect.
	- The lpadmin command didn't use the ppd-name attribute
	  with the -m option; this prevented the use of the